lernanta/static/sass/overrides.scss
/* ... */
h3 {
  font-family: $secondary-font;
  font-size: pem(16px);
  font-weight: bold;
  margin-top: pem(15px);
}

h4 {
  font-family: $primary-font;
  font-size: pem(18px);
  color: $slate;
}

p {
  line-height: pem(22px);
  margin: 0px;
  margin-top: pem(10px);
  .no-top-margin {
    margin: 0px;
  }
}

a {
  color: $cyan;
  &:hover {
    color: lighten($cyan, 10%);
  }
}

// Forms

form {
  margin: 0px;
}

input {
  &[type="text"], &[type="password"], &[type="datetime"], &[type="datetime-local"], &[type="date"], &[type="month"], &[type="time"], &[type="week"], &[type="number"], &[type="email"], &[type="url"], &[type="search"], &[type="tel"], &[type="color"] {
    background-color: $cloud;
    border: none;
    /* @include border-radius(none) */
    @include border-radius(3px);
    /* @include inset-1px-box-shadow-on-one-side($dark-pewter, top) */
    color: $slate;
    @include input-placeholder($silver);
    font-family: $secondary-font;
  }
}

select {
  font-family: $secondary-font;
}

#breadcrumbs-actions {
  a, .btn {
    margin-right: 0px;
  }
}

#learn #breadcrumbs-actions {
  a, .btn {
    margin-right: 53px;
  }
}

.course-create input {
  &[type="text"], &[type="password"], &[type="datetime"], &[type="datetime-local"], &[type="date"], &[type="month"], &[type="time"], &[type="week"], &[type="number"], &[type="email"], &[type="url"], &[type="search"], &[type="tel"], &[type="color"] {
    background-color: $white;
    border: none;
    /* @include border-radius(none) */
    @include border-radius(3px);
    /* @include inset-1px-box-shadow-on-one-side($dark-pewter, top) */
    color: $slate;
    @include input-placeholder($silver);
    font-family: $secondary-font;
  }
}

.course-create textarea {
  @include input-placeholder($silver);
}

stuff {
  &:focus {
    background-color: $cloud;
    font-family: "sense";
    @include input-placeholder($slate);
  }
}

input, textarea {
  width: 230px;
}

.form-horizontal {
  input, textarea {
    width: 400px;
  }
}

// Navigation
.nav-tabs {
  font-family: $primary-font;
  font-size: 16px;
  border-bottom: 1px solid $white;
  a {
    color: inherit;
    &:hover {
      color: $cyan;
    }
  }
  .dropdown-menu{
    margin-top: 0px;
  }
  .dropdown-toggle {
    background-color: inherit;
    border: none;
    color: inherit;
    .active a {
      &:hover {
        background-color: #dfe4ec;
      }
    }
  }
  .active a {
    border: 1px solid $white;
    border-bottom: 0px;
    background-color: $snow;
    box-shadow: 1px 1px 1px $white;
    &:hover {
      color: $cyan;
      background-color: $white;
      border: 1px solid $white;
      border-bottom: 0px;
    }
  }
}

.tabs-left {
  .nav-tabs {
    margin-right: 0px;
  }
  .tab-content {
    border: 1px solid rgb(221, 221, 221);
    min-height: 350px;
  }
}

.navbar-title {
  @extend .navbar;
  .navbar-center {
    float: right;
    position: relative;
    left: -50%;
    .nav {
      left: 50%;
    }
  }
  li {
    margin-left: 20px;
    margin-right: 20px;
  }
  .navbar-inner .nav li a:hover {
    background-color: transparent;
    /* color: transparent */
  }
}




////////////////////////////////////////////////
// NAVBAR redone - responsive
/////////////////////////////////////////////


.navbar a.brand{
  padding-top: 3px;
  margin-bottom: 20px;
  margin-right: 25px;
}

.nav li.left-link{
  padding-left: 10px;
  a{
    padding: 0px;
  }
}

.navbar ul.right-links li a{
  @include adjust-font-size-to($base-font-size);
  @include adjust-leading-to($base-no-leader-line-height);

}

.navbar-custom-header-text {
    @include adjust-font-size-to(14px);
    @include adjust-leading-to($base-no-leader-line-height);
    margin-bottom: 0;
    color: $steel;
    font-family: $altFontFamily;
    /* @include add-all-sides-text-shadow($steel, $snow) */
}

div.nav-google-search{
  margin-top: 12px;
  margin-left: 30px;
  margin-bottom: 0px;
  border: none;
  .gse-search-box{
    @extend .navbar-search;
  }
  .gsc-input{
    @extend .search-query;
    width: 150px;
  }
}

.navbar .navbar-inner{
  min-height: 85px;
  font-family: $baseFontFamily;
  padding-top: 35px;

}
.navbar .navbar-inner .container{
  @extend .container;
//  padding-left: 50px;
//  padding-right: 50px;
}

.navbar a.btn-navbar{
  @include background($cyan);
//  position: absolute;
//  top: 35px;
//  right: 35px;
  margin-top: 11px;
}

.navbar .nav a {
        @include adjust-font-size-to(20px);
        float: none;
        padding-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        @include adjust-leading-to($base-no-leader-line-height);
        color: $slate;
        text-decoration: none;
        /* @include add-all-sides-text-shadow($slate, $snow) */
        @include margin-leader($base-no-leader-line-height * 6px / $base-font-size);
        &.make-blue {
          @include link-colors($linkColor, $linkColorHover, $linkColorHover, $linkColor, $linkColorHover);
        }
        .right-link-1 {
          @include adjust-font-size-to($base-font-size);
          @include adjust-leading-to($base-no-leader-line-height);
          margin-right: pem(29px);
          margin-left: 0px;
        }
        .right-link-2 {
          @include adjust-font-size-to($base-font-size);
          @include adjust-leading-to($base-no-leader-line-height);
          margin-right: pem(24px);
          margin-left: 0px;
        }
        .right-link-3 {
          @include adjust-font-size-to($base-font-size);
          @include adjust-leading-to($base-no-leader-line-height);
        }
      }

.nav .divider-vertical {
    width: 1px;
    height: 23px;
    margin-top: pem(9px);
    overflow: hidden;
    border-right: 1px solid $slate;
    margin-left: pem(26px);
    margin-right: pem(23px);
    &.right-divider {
      margin-top: pem(6px);
      margin-left: 0px;
    }
  }
/* ... */

